# backgammon-cli

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: backgammon.rs  lib.rs  main.rs
src/backgammon/: board.rs  dice.rs  dice_roll.rs  game.rs  location.rs  mod.rs  notation.rs  player.rs  position.rs  roll.rs  turn.rs
