[package]
name = "backgammon-cli"
version = "0.1.0"
edition = "2024"
description = "A command-line interface for playing backgammon with a text-based UI"
license = "MIT"
repository = "https://github.com/grahampreston/backgammon-cli"
readme = "README.md"
keywords = ["backgammon", "game", "cli", "board-game", "terminal"]
categories = ["games", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "3.0.0"
itertools = "0.14.0"
rand = "0.9.0"
regex = "1.11.1"
thiserror = "2.0.11"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
